--- a/MvcNetCoreSessionEmpleados/Views/Shared/_Layout.cshtml
+++ b/MvcNetCoreSessionEmpleados/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Empleados" asp-action="SessionSalarios">SessionSalarios</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Empleados" asp-action="SessionEmpleados">Session Empleados</a>
+                        </li>
                     </ul>
                 </div>
             </div>
