--- a/MvcNetCoreSessionEmpleados/Views/Shared/_Layout.cshtml
+++ b/MvcNetCoreSessionEmpleados/Views/Shared/_Layout.cshtml
@@ -38,6 +38,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Empleados" asp-action="SessionEmpleadosV4">Session Empleados V4</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Empleados" asp-action="SessionEmpleadosV5">Session Empleados V5</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Empleados" asp-action="SessionEmpleadosV6">Session Empleados V6</a>
+                        </li
                     </ul>
                 </div>
             </div>
