implementado memoria cache empleados favoritos

--- a/MvcNetCoreSessionEmpleados/Views/Shared/_Layout.cshtml
+++ b/MvcNetCoreSessionEmpleados/Views/Shared/_Layout.cshtml
@@ -43,7 +43,10 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Empleados" asp-action="SessionEmpleadosV6">Session Empleados V6</a>
-                        </li
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Empleados" asp-action="EmpleadosFavoritos">Empleados Favoritos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
