--- a/MvcNetCoreSessionEmpleados/Views/Empleados/SessionEmpleadosV6.cshtml
+++ b/MvcNetCoreSessionEmpleados/Views/Empleados/SessionEmpleadosV6.cshtml
@@ -18,7 +18,9 @@
 <ul class="list-group">
     @foreach (Empleado empleado in Model)
     {
-
+        <a asp-controller="Empleados"
+           asp-action="SessionEmpleadosV6"
+        asp-route-idfavorito="@empleado.IdEmpleado">Favorito</a>
         @if (idsEmpleados != null && idsEmpleados.Contains(empleado.IdEmpleado))
         {
             <li class="list-group-item list-group-item-warning">
