empleados favoritos desde el controller

--- a/MvcNetCoreSessionEmpleados/Views/Empleados/EmpleadosAlmacenadosV6.cshtml
+++ b/MvcNetCoreSessionEmpleados/Views/Empleados/EmpleadosAlmacenadosV6.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "EmpleadosAlmacenados";
+    //  NECESITAMOS SESSION PARA SABER EL DIBUJO A REALIZAR
+    
 }
 
 <h1>EmpleadosAlmacenados</h1>
@@ -12,6 +14,9 @@
         Volver a almacenar empleados V6
     </a>
 </p>
+
+
+
 @if (Model != null)
 {
     <table class="table table-bordered table-warning">
