--- a/MvcNetCoreSessionEmpleados/Views/_ViewImports.cshtml
+++ b/MvcNetCoreSessionEmpleados/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using MvcNetCoreSessionEmpleados
 @using MvcNetCoreSessionEmpleados.Models
 @using MvcNetCoreSessionEmpleados.Extensions
+@* INYECCION DE DEPENDECIAS EN LAS VISTAS DE IMEMORY CACHE *@
+@using Microsoft.Extensions.Caching.Memory
+@inject IMemoryCache memoryCache
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
